--- a/.github/workflows/build-suite-native-preview.yml
+++ b/.github/workflows/build-suite-native-preview.yml
@@ -5,17 +5,19 @@ on:
     # push develop(default) branch is necessary for this action to update its fingerprint database
     branches: [develop]
   pull_request:
+    types: [opened, synchronize, labeled]
     paths:
       - "suite-native/**"
       - "packages/react-native-usb/**"
       - "packages/transport-native/**"
       - "yarn.lock"
-      # list of paths is not complete, but it's always possible to dispatch manually
+      # list of paths is not complete, but it's always possible to dispatch manually using 'build-mobile' label
   workflow_dispatch:
+    # manual dispatch will not add any comment to PR, use label 'build-mobile' if PR exists
 
 jobs:
   update:
-    if: github.repository == 'trezor/trezor-suite' || github.repository == 'trezor/trezor-suite-private'
+    if: ( github.event.action != 'labeled' || contains(github.event.pull_request.labels.*.name, 'build-mobile')) && (github.repository == 'trezor/trezor-suite' || github.repository == 'trezor/trezor-suite-private')
     name: EAS Update
     runs-on: ubuntu-latest
     concurrency: fingerprint-${{ github.workflow }}-${{ github.head_ref || github.run_id }}
