--- a/suite-native/accounts/tsconfig.json
+++ b/suite-native/accounts/tsconfig.json
@@ -36,6 +36,7 @@
         { "path": "../staking" },
         { "path": "../toasts" },
         { "path": "../tokens" },
+        { "path": "../../packages/connect" },
         { "path": "../../packages/styles" }
     ]
 }
