--- a/packages/suite-desktop-core/package.json
+++ b/packages/suite-desktop-core/package.json
@@ -37,7 +37,8 @@
         "electron-store": "8.2.0",
         "electron-updater": "6.3.9",
         "openpgp": "^5.11.2",
-        "systeminformation": "^5.23.5"
+        "systeminformation": "^5.23.5",
+        "ws": "^8.18.0"
     },
     "devDependencies": {
         "@currents/playwright": "^1.3.1",
@@ -50,6 +51,7 @@
         "@trezor/trezor-user-env-link": "workspace:*",
         "@trezor/type-utils": "workspace:*",
         "@types/electron-localshortcut": "^3.1.3",
+        "@types/ws": "^8.5.12",
         "electron": "33.1.0",
         "fs-extra": "^11.2.0",
         "glob": "^10.3.10",
