feat(suite-native): ethereum tokens send mvp

--- a/suite-native/module-send/tsconfig.json
+++ b/suite-native/module-send/tsconfig.json
@@ -41,6 +41,7 @@
         { "path": "../navigation" },
         { "path": "../qr-code" },
         { "path": "../settings" },
+        { "path": "../tokens" },
         {
             "path": "../../packages/blockchain-link-types"
         },
