--- a/suite-native/formatters/package.json
+++ b/suite-native/formatters/package.json
@@ -21,6 +21,7 @@
         "@suite-common/wallet-utils": "workspace:*",
         "@suite-native/atoms": "workspace:*",
         "@suite-native/settings": "workspace:*",
+        "@suite-native/tokens": "workspace:*",
         "@trezor/env-utils": "workspace:*",
         "@trezor/styles": "workspace:*",
         "@trezor/utils": "workspace:*",
