--- a/suite-native/module-send/package.json
+++ b/suite-native/module-send/package.json
@@ -38,6 +38,7 @@
         "@suite-native/navigation": "workspace:*",
         "@suite-native/qr-code": "workspace:*",
         "@suite-native/settings": "workspace:*",
+        "@suite-native/tokens": "workspace:*",
         "@trezor/blockchain-link-types": "workspace:*",
         "@trezor/react-utils": "workspace:*",
         "@trezor/styles": "workspace:*",
