--- a/suite-common/wallet-constants/tsconfig.json
+++ b/suite-common/wallet-constants/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "extends": "../../tsconfig.base.json",
     "compilerOptions": { "outDir": "libDev" },
-    "references": []
+    "references": [
+        { "path": "../../packages/utils" }
+    ]
 }
