feat(product-components): create NonAsciiBanner

--- a/packages/product-components/tsconfig.json
+++ b/packages/product-components/tsconfig.json
@@ -28,6 +28,7 @@
         { "path": "../env-utils" },
         { "path": "../react-utils" },
         { "path": "../theme" },
+        { "path": "../urls" },
         { "path": "../utils" }
     ]
 }
