--- a/suite-native/module-send/package.json
+++ b/suite-native/module-send/package.json
@@ -35,6 +35,7 @@
         "@suite-native/helpers": "workspace:*",
         "@suite-native/icons": "workspace:*",
         "@suite-native/intl": "workspace:*",
+        "@suite-native/link": "workspace:*",
         "@suite-native/navigation": "workspace:*",
         "@suite-native/qr-code": "workspace:*",
         "@suite-native/settings": "workspace:*",
