--- a/packages/utxo-lib/package.json
+++ b/packages/utxo-lib/package.json
@@ -59,9 +59,11 @@
     },
     "devDependencies": {
         "@types/bchaddrjs": "^0.4.3",
+        "@types/bn.js": "^5.1.6",
         "@types/bs58": "^4.0.4",
         "@types/bs58check": "^2.1.2",
         "@types/create-hmac": "^1.1.3",
+        "@types/events": "^3.0.3",
         "@types/wif": "^2.0.5",
         "minimaldata": "^1.0.2",
         "tsx": "^4.16.3"
