feat(components): move getAssetLogoUrl to asset-utils

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -23,6 +23,7 @@
         "@suite-common/suite-constants": "workspace:*",
         "@suite-common/suite-utils": "workspace:*",
         "@suite-common/validators": "workspace:*",
+        "@trezor/asset-utils": "workspace:*",
         "@trezor/connect": "workspace:*",
         "@trezor/dom-utils": "workspace:*",
         "@trezor/env-utils": "workspace:*",
