--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -26,6 +26,7 @@
         {
             "path": "../../suite-common/validators"
         },
+        { "path": "../asset-utils" },
         { "path": "../connect" },
         { "path": "../dom-utils" },
         { "path": "../env-utils" },
