--- a/suite-native/atoms/package.json
+++ b/suite-native/atoms/package.json
@@ -15,6 +15,8 @@
         "@mobily/ts-belt": "^3.13.1",
         "@shopify/flash-list": "1.7.1",
         "@shopify/react-native-skia": "1.3.11",
+        "@suite-common/wallet-config": "workspace:*",
+        "@suite-common/wallet-types": "workspace:*",
         "@suite-native/config": "workspace:*",
         "@suite-native/icons": "workspace:*",
         "@suite-native/intl": "workspace:^",
