--- a/suite-native/atoms/tsconfig.json
+++ b/suite-native/atoms/tsconfig.json
@@ -2,6 +2,12 @@
     "extends": "../../tsconfig.base.json",
     "compilerOptions": { "outDir": "libDev" },
     "references": [
+        {
+            "path": "../../suite-common/wallet-config"
+        },
+        {
+            "path": "../../suite-common/wallet-types"
+        },
         { "path": "../config" },
         { "path": "../icons" },
         { "path": "../intl" },
