--- a/suite-native/icons/package.json
+++ b/suite-native/icons/package.json
@@ -15,7 +15,8 @@
         "@shopify/react-native-skia": "1.3.11",
         "@suite-common/icons": "workspace:*",
         "@suite-common/wallet-config": "workspace:*",
-        "@suite-common/wallet-types": "workspace:*",
+        "@suite-common/wallet-utils": "workspace:*",
+        "@trezor/asset-utils": "workspace:*",
         "@trezor/connect": "workspace:*",
         "@trezor/styles": "workspace:*",
         "@trezor/theme": "workspace:*",
