--- a/suite-native/icons/tsconfig.json
+++ b/suite-native/icons/tsconfig.json
@@ -7,8 +7,9 @@
             "path": "../../suite-common/wallet-config"
         },
         {
-            "path": "../../suite-common/wallet-types"
+            "path": "../../suite-common/wallet-utils"
         },
+        { "path": "../../packages/asset-utils" },
         { "path": "../../packages/connect" },
         { "path": "../../packages/styles" },
         { "path": "../../packages/theme" }
