--- a/suite-native/module-accounts-management/tsconfig.json
+++ b/suite-native/module-accounts-management/tsconfig.json
@@ -7,6 +7,9 @@
         },
         { "path": "../../suite-common/graph" },
         {
+            "path": "../../suite-common/suite-constants"
+        },
+        {
             "path": "../../suite-common/wallet-config"
         },
         {
