--- a/suite-native/device-manager/tsconfig.json
+++ b/suite-native/device-manager/tsconfig.json
@@ -20,6 +20,7 @@
         { "path": "../intl" },
         { "path": "../link" },
         { "path": "../navigation" },
+        { "path": "../settings" },
         { "path": "../../packages/styles" },
         { "path": "../../packages/theme" }
     ]
