ci: enable workflow_dispatch for test-suite-web-e2e

--- a/.github/workflows/test-suite-web-e2e.yml
+++ b/.github/workflows/test-suite-web-e2e.yml
@@ -22,6 +22,7 @@ on:
       - ".github/workflows/release*"
       - ".github/workflows/template*"
       - ".github/actions/release*/**"
+  workflow_dispatch:
 
 env:
   DEV_SERVER_URL: "https://dev.suite.sldev.cz"
