chore: update node-gyp

--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
         "electron": "33.1.0",
         "@types/node": "20.12.7",
         "@types/react": "18.2.55",
-        "bn.js": "5.2.1"
+        "bn.js": "5.2.1",
+        "node-gyp": "10.2.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.23.9",
