feat(suite-native): only download token definitions for relevant networks

--- a/suite-native/discovery/tsconfig.json
+++ b/suite-native/discovery/tsconfig.json
@@ -29,6 +29,7 @@
         { "path": "../device" },
         { "path": "../device-mutex" },
         { "path": "../feature-flags" },
+        { "path": "../tokens" },
         { "path": "../../packages/connect" },
         { "path": "../../packages/utils" }
     ]
