--- a/suite-native/discovery/package.json
+++ b/suite-native/discovery/package.json
@@ -26,6 +26,7 @@
         "@suite-native/device": "workspace:*",
         "@suite-native/device-mutex": "workspace:*",
         "@suite-native/feature-flags": "workspace:*",
+        "@suite-native/tokens": "workspace:*",
         "@trezor/connect": "workspace:*",
         "@trezor/utils": "workspace:*",
         "proxy-memoize": "2.0.2",
