--- a/packages/blockchain-link-utils/tsconfig.json
+++ b/packages/blockchain-link-utils/tsconfig.json
@@ -5,6 +5,7 @@
         { "path": "../env-utils" },
         { "path": "../utils" },
         { "path": "../blockchain-link-types" },
+        { "path": "../eslint" },
         { "path": "../type-utils" }
     ]
 }
