--- a/packages/blockchain-link/tsconfig.lib.json
+++ b/packages/blockchain-link/tsconfig.lib.json
@@ -26,6 +26,9 @@
             "path": "../e2e-utils"
         },
         {
+            "path": "../eslint"
+        },
+        {
             "path": "../type-utils"
         }
     ]
