--- a/packages/connect-plugin-stellar/tsconfig.json
+++ b/packages/connect-plugin-stellar/tsconfig.json
@@ -2,5 +2,8 @@
     "extends": "../../tsconfig.base.json",
     "compilerOptions": { "outDir": "./libDev" },
     "include": ["."],
-    "references": [{ "path": "../utils" }]
+    "references": [
+        { "path": "../utils" },
+        { "path": "../eslint" }
+    ]
 }
