--- a/packages/connect-web/tsconfig.json
+++ b/packages/connect-web/tsconfig.json
@@ -23,6 +23,7 @@
     "references": [
         { "path": "../connect" },
         { "path": "../connect-common" },
-        { "path": "../utils" }
+        { "path": "../utils" },
+        { "path": "../eslint" }
     ]
 }
