--- a/packages/connect-webextension/tsconfig.json
+++ b/packages/connect-webextension/tsconfig.json
@@ -11,6 +11,7 @@
         { "path": "../connect-common" },
         { "path": "../connect-web" },
         { "path": "../utils" },
+        { "path": "../eslint" },
         { "path": "../node-utils" },
         { "path": "../trezor-user-env-link" }
     ]
