--- a/packages/connect-webextension/tsconfig.lib.json
+++ b/packages/connect-webextension/tsconfig.lib.json
@@ -20,6 +20,9 @@
             "path": "../utils"
         },
         {
+            "path": "../eslint"
+        },
+        {
             "path": "../node-utils"
         },
         {
