--- a/packages/connect/tsconfig.json
+++ b/packages/connect/tsconfig.json
@@ -12,6 +12,7 @@
         { "path": "../transport" },
         { "path": "../utils" },
         { "path": "../utxo-lib" },
+        { "path": "../eslint" },
         { "path": "../trezor-user-env-link" }
     ]
 }
