--- a/packages/connect/tsconfig.lib.json
+++ b/packages/connect/tsconfig.lib.json
@@ -35,6 +35,9 @@
             "path": "../utxo-lib"
         },
         {
+            "path": "../eslint"
+        },
+        {
             "path": "../trezor-user-env-link"
         }
     ]
