--- a/packages/transport/tsconfig.json
+++ b/packages/transport/tsconfig.json
@@ -8,6 +8,7 @@
         { "path": "../protobuf" },
         { "path": "../protocol" },
         { "path": "../utils" },
+        { "path": "../eslint" },
         { "path": "../trezor-user-env-link" }
     ]
 }
