--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -2,5 +2,7 @@
     "extends": "../tsconfig.base.json",
     "compilerOptions": { "outDir": "libDev" },
     "include": [".", "**/*.json"],
-    "references": []
+    "references": [
+        { "path": "../packages/eslint" }
+    ]
 }
