--- a/packages/blockchain-link-utils/tsconfig.lib.json
+++ b/packages/blockchain-link-utils/tsconfig.lib.json
@@ -15,6 +15,9 @@
             "path": "../blockchain-link-types"
         },
         {
+            "path": "../eslint"
+        },
+        {
             "path": "../type-utils"
         }
     ]
