--- a/packages/blockchain-link/tsconfig.json
+++ b/packages/blockchain-link/tsconfig.json
@@ -13,6 +13,7 @@
         { "path": "../utils" },
         { "path": "../utxo-lib" },
         { "path": "../e2e-utils" },
+        { "path": "../eslint" },
         { "path": "../type-utils" }
     ]
 }
