--- a/packages/connect-iframe/tsconfig.json
+++ b/packages/connect-iframe/tsconfig.json
@@ -9,6 +9,7 @@
         { "path": "../connect" },
         { "path": "../connect-analytics" },
         { "path": "../connect-common" },
-        { "path": "../env-utils" }
+        { "path": "../env-utils" },
+        { "path": "../eslint" }
     ]
 }
