--- a/packages/connect-popup/tsconfig.json
+++ b/packages/connect-popup/tsconfig.json
@@ -16,6 +16,7 @@
         { "path": "../device-utils" },
         { "path": "../transport" },
         { "path": "../urls" },
+        { "path": "../eslint" },
         { "path": "../node-utils" },
         { "path": "../trezor-user-env-link" },
         { "path": "../utils" }
