--- a/packages/schema-utils/tsconfig.json
+++ b/packages/schema-utils/tsconfig.json
@@ -1,5 +1,5 @@
 {
     "extends": "../../tsconfig.base.json",
     "compilerOptions": { "outDir": "libDev" },
-    "references": []
+    "references": [{ "path": "../eslint" }]
 }
