--- a/packages/suite-build/tsconfig.json
+++ b/packages/suite-build/tsconfig.json
@@ -6,6 +6,7 @@
         {
             "path": "../../suite-common/suite-config"
         },
-        { "path": "../suite" }
+        { "path": "../suite" },
+        { "path": "../eslint" }
     ]
 }
