--- a/packages/utils/tsconfig.lib.json
+++ b/packages/utils/tsconfig.lib.json
@@ -4,5 +4,9 @@
         "outDir": "lib"
     },
     "include": ["./src"],
-    "references": []
+    "references": [
+        {
+            "path": "../eslint"
+        }
+    ]
 }
