--- a/suite-native/react-native-graph/tsconfig.json
+++ b/suite-native/react-native-graph/tsconfig.json
@@ -7,6 +7,7 @@
     "references": [
         {
             "path": "../../suite-common/suite-utils"
-        }
+        },
+        { "path": "../../packages/eslint" }
     ]
 }
