--- a/packages/connect-iframe/package.json
+++ b/packages/connect-iframe/package.json
@@ -3,9 +3,10 @@
     "version": "9.0.0",
     "private": true,
     "scripts": {
-        "build:iframe": "TS_NODE_PROJECT=\"tsconfig.json\" yarn webpack --config ./webpack/prod.webpack.config.ts --stats-children",
+        "build:iframe": "TS_NODE_PROJECT=\"tsconfig.json\" yarn webpack --config ./webpack/iframe.webpack.config.ts --stats-children",
+        "build:sessions": "TS_NODE_PROJECT=\"tsconfig.json\" yarn webpack --config ./webpack/sessions.webpack.config.ts --stats-children",
         "build:core-module": "TS_NODE_PROJECT=\"tsconfig.json\" yarn webpack --config ./webpack/core.webpack.config.ts --stats-children",
-        "build": "yarn rimraf build && yarn build:iframe && yarn build:core-module",
+        "build": "yarn rimraf build && yarn build:iframe && yarn build:core-module && yarn build:sessions",
         "___NOTE__": "iframe build is one of the prerequisites of suite-web. build:lib script provides it together with other libraries",
         "build:lib": "yarn build",
         "type-check": "yarn g:tsc --build tsconfig.json",
