--- a/packages/suite-build/tsconfig.json
+++ b/packages/suite-build/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "../../tsconfig.base.json",
     "compilerOptions": { "outDir": "./libDev" },
-    "include": ["."],
+    "include": [".", "**/*.json"],
     "references": [
         {
             "path": "../../suite-common/suite-config"
