--- a/packages/connect-examples/webextension-mv3-sw-ts/tsconfig.json
+++ b/packages/connect-examples/webextension-mv3-sw-ts/tsconfig.json
@@ -5,6 +5,7 @@
         "types": ["chrome"]
     },
     "references": [
-        { "path": "../../connect-webextension" }
+        { "path": "../../connect-webextension" },
+        { "path": "../../eslint" }
     ]
 }
