--- a/packages/suite-data/tsconfig.json
+++ b/packages/suite-data/tsconfig.json
@@ -15,6 +15,7 @@
         { "path": "../connect" },
         { "path": "../env-utils" },
         { "path": "../urls" },
-        { "path": "../utils" }
+        { "path": "../utils" },
+        { "path": "../eslint" }
     ]
 }
