--- a/packages/request-manager/tsconfig.json
+++ b/packages/request-manager/tsconfig.json
@@ -7,6 +7,7 @@
     "include": ["."],
     "references": [
         { "path": "../node-utils" },
-        { "path": "../utils" }
+        { "path": "../utils" },
+        { "path": "../eslint" }
     ]
 }
