--- a/packages/transport-bridge/tsconfig.json
+++ b/packages/transport-bridge/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": { "outDir": "libDev" },
     "references": [
         { "path": "../components" },
+        { "path": "../eslint" },
         { "path": "../node-utils" },
         { "path": "../protocol" },
         { "path": "../theme" },
