--- a/suite-common/redux-utils/package.json
+++ b/suite-common/redux-utils/package.json
@@ -22,6 +22,7 @@
         "lodash": "^4.17.21",
         "react": "18.2.0",
         "react-redux": "8.0.7",
-        "redux": "^4.2.1"
+        "redux": "^4.2.1",
+        "reselect": "5.1.1"
     }
 }
