--- a/suite-common/token-definitions/package.json
+++ b/suite-common/token-definitions/package.json
@@ -27,8 +27,7 @@
         "@trezor/env-utils": "workspace:*",
         "@trezor/type-utils": "workspace:*",
         "@trezor/utils": "workspace:*",
-        "jws": "^4.0.0",
-        "proxy-memoize": "2.0.2"
+        "jws": "^4.0.0"
     },
     "devDependencies": {
         "ajv": "^8.17.1"
