--- a/suite-native/accounts/package.json
+++ b/suite-native/accounts/package.json
@@ -15,6 +15,7 @@
         "@mobily/ts-belt": "^3.13.1",
         "@react-navigation/native": "6.1.18",
         "@suite-common/formatters": "workspace:*",
+        "@suite-common/redux-utils": "workspace:*",
         "@suite-common/token-definitions": "workspace:*",
         "@suite-common/validators": "workspace:*",
         "@suite-common/wallet-config": "workspace:*",
@@ -37,7 +38,6 @@
         "@trezor/connect": "workspace:*",
         "@trezor/styles": "workspace:*",
         "jotai": "1.9.1",
-        "proxy-memoize": "2.0.2",
         "react": "18.2.0",
         "react-native": "0.75.2",
         "react-native-reanimated": "3.16.1",
