--- a/suite-native/tokens/package.json
+++ b/suite-native/tokens/package.json
@@ -12,13 +12,13 @@
     },
     "dependencies": {
         "@mobily/ts-belt": "^3.13.1",
+        "@suite-common/redux-utils": "workspace:*",
         "@suite-common/token-definitions": "workspace:*",
         "@suite-common/wallet-config": "workspace:*",
         "@suite-common/wallet-core": "workspace:*",
         "@suite-common/wallet-types": "workspace:*",
         "@trezor/blockchain-link": "workspace:*",
         "@trezor/utils": "workspace:*",
-        "proxy-memoize": "2.0.2",
         "react": "18.2.0"
     }
 }
