--- a/suite-native/transactions/package.json
+++ b/suite-native/transactions/package.json
@@ -18,6 +18,7 @@
         "@shopify/flash-list": "1.7.1",
         "@shopify/react-native-skia": "1.3.11",
         "@suite-common/formatters": "workspace:*",
+        "@suite-common/redux-utils": "workspace:*",
         "@suite-common/suite-types": "workspace:*",
         "@suite-common/token-definitions": "workspace:*",
         "@suite-common/wallet-config": "workspace:*",
@@ -38,7 +39,6 @@
         "@trezor/styles": "workspace:*",
         "@trezor/theme": "workspace:*",
         "@trezor/utils": "workspace:*",
-        "proxy-memoize": "2.0.2",
         "react": "18.2.0",
         "react-native": "0.75.2",
         "react-native-gesture-handler": "2.18.1",
