fix: ignore for build files in connect-examples

--- a/packages/connect-examples/electron-main-process/package.json
+++ b/packages/connect-examples/electron-main-process/package.json
@@ -55,6 +55,7 @@
         "@trezor/connect": "workspace:*"
     },
     "devDependencies": {
+        "@trezor/eslint": "workspace:*",
         "electron": "33.1.0",
         "electron-builder": "25.1.8"
     }
