--- a/packages/connect-examples/electron-renderer-with-assets/tsconfig.json
+++ b/packages/connect-examples/electron-renderer-with-assets/tsconfig.json
@@ -4,6 +4,7 @@
     "include": ["."],
     "references": [
         { "path": "../../connect" },
-        { "path": "../../connect-web" }
+        { "path": "../../connect-web" },
+        { "path": "../../eslint" }
     ]
 }
