--- a/packages/connect-examples/electron-renderer-with-popup/tsconfig.json
+++ b/packages/connect-examples/electron-renderer-with-popup/tsconfig.json
@@ -2,5 +2,5 @@
     "extends": "../../../tsconfig.base.json",
     "compilerOptions": { "outDir": "./libDev" },
     "include": ["."],
-    "references": []
+    "references": [{ "path": "../../eslint" }]
 }
