--- a/packages/connect-examples/electron-renderer-with-assets/package.json
+++ b/packages/connect-examples/electron-renderer-with-assets/package.json
@@ -58,6 +58,7 @@
     "devDependencies": {
         "@trezor/connect": "workspace:*",
         "@trezor/connect-web": "workspace:*",
+        "@trezor/eslint": "workspace:*",
         "babel-loader": "^9.1.3",
         "concurrently": "^8.2.2",
         "copy-webpack-plugin": "^12.0.2",
