--- a/suite-native/app/package.json
+++ b/suite-native/app/package.json
@@ -89,7 +89,6 @@
         "expo-build-properties": "0.12.5",
         "expo-camera": "15.0.15",
         "expo-clipboard": "6.0.3",
-        "expo-crypto": "13.0.2",
         "expo-dev-client": "4.0.25",
         "expo-haptics": "13.0.1",
         "expo-image": "1.12.15",
@@ -111,6 +110,7 @@
         "react-native-gesture-handler": "2.18.1",
         "react-native-keyboard-aware-scroll-view": "0.9.5",
         "react-native-mmkv": "2.12.2",
+        "react-native-quick-crypto": "0.7.6",
         "react-native-reanimated": "3.16.1",
         "react-native-restart": "0.0.27",
         "react-native-safe-area-context": "4.10.9",
