chore(ci): only build node-bridge in the main repository

--- a/.github/workflows/build-node-bridge.yml
+++ b/.github/workflows/build-node-bridge.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   node-bridge-bin-js:
+    if: github.repository == 'trezor/trezor-suite'
     name: Build node-bridge bin.js file
     runs-on: ubuntu-latest
     steps:
